tests-integration/fixtures/checking/032_recursive_synonym_expansion/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
testF :: F -> F
testG :: G -> G
testH :: H -> H
testValid :: Int -> Int

Types
F :: forall (t3 :: Type). (t3 :: Type)
G :: forall (t3 :: Type). (t3 :: Type)
H :: forall (t5 :: Type). (t5 :: Type)
Valid :: Type

Synonyms
F = G
  Quantified = :0
  Kind = :0
  Type = :0

G = F
  Quantified = :0
  Kind = :0
  Type = :0

H = H
  Quantified = :0
  Kind = :0
  Type = :0

Valid = Int
  Quantified = :0
  Kind = :0
  Type = :0


Diagnostics
error[RecursiveSynonymExpansion]: Recursive type synonym expansion
  --> 8:1..8:16
  |
8 | testF :: F -> F
  | ^~~~~~~~~~~~~~~
error[RecursiveSynonymExpansion]: Recursive type synonym expansion
  --> 8:1..8:16
  |
8 | testF :: F -> F
  | ^~~~~~~~~~~~~~~
error[RecursiveSynonymExpansion]: Recursive type synonym expansion
  --> 8:1..8:16
  |
8 | testF :: F -> F
  | ^~~~~~~~~~~~~~~
error[RecursiveSynonymExpansion]: Recursive type synonym expansion
  --> 11:1..11:16
   |
11 | testG :: G -> G
   | ^~~~~~~~~~~~~~~
error[RecursiveSynonymExpansion]: Recursive type synonym expansion
  --> 11:1..11:16
   |
11 | testG :: G -> G
   | ^~~~~~~~~~~~~~~
error[RecursiveSynonymExpansion]: Recursive type synonym expansion
  --> 11:1..11:16
   |
11 | testG :: G -> G
   | ^~~~~~~~~~~~~~~
error[RecursiveSynonymExpansion]: Recursive type synonym expansion
  --> 14:1..14:16
   |
14 | testH :: H -> H
   | ^~~~~~~~~~~~~~~
error[RecursiveSynonymExpansion]: Recursive type synonym expansion
  --> 14:1..14:16
   |
14 | testH :: H -> H
   | ^~~~~~~~~~~~~~~
error[RecursiveSynonymExpansion]: Recursive type synonym expansion
  --> 14:1..14:16
   |
14 | testH :: H -> H
   | ^~~~~~~~~~~~~~~
